fix(Button): fix dark mode color

--- a/packages/themes/src/morpheme/_button.dark.scss
+++ b/packages/themes/src/morpheme/_button.dark.scss
@@ -24,12 +24,12 @@
     }
 
     &-default {
-      --btn-bg-color: var(--color-gray-true-800);
-      --btn-border-color: var(--color-gray-true-800);
+      --btn-bg-color: var(--color-gray-true-700);
+      --btn-border-color: var(--color-gray-true-700);
       --btn-text-color: var(--color-gray-true-200);
 
       &:hover {
-        --btn-bg-color: var(--color-gray-true-900);
+        --btn-bg-color: var(--color-gray-true-800);
       }
 
       // outlined
@@ -57,7 +57,7 @@
 
     &-dark {
       --btn-bg-color: var(--color-gray-800);
-      --btn-border-color: var(--color-gray-800);
+      --btn-border-color: var(--color-gray-700);
       --btn-text-color: var(--color-white);
 
       &:hover {
@@ -68,8 +68,8 @@
       // outlined
       &.btn--outlined {
         --btn-bg-color: transparent;
-        --btn-border-color: var(--color-gray-800);
-        --btn-text-color: var(--color-gray-800);
+        --btn-border-color: var(--color-gray-200);
+        --btn-text-color: var(--color-gray-200);
 
         &:hover {
           --btn-bg-color: var(--color-gray-800);
@@ -82,10 +82,10 @@
       &.btn--text {
         --btn-bg-color: transparent;
         --btn-border-color: transparent;
-        --btn-text-color: var(--color-gray-800);
+        --btn-text-color: var(--color-gray-200);
 
         &:hover {
-          --btn-text-color: var(--color-gray-900);
+          --btn-text-color: var(--color-gray-300);
         }
       }
     }
